--- a/index.html
+++ b/index.html
@@ -131,6 +131,15 @@
     <a class="btn" href="https://forms.google.com" target="_blank">Submit Cashback Request</a>
   </section>
 
+
+  <section class="section" style="text-align: center">
+  <h2>Sign up for cashback</h2>
+  <p>Create an account to start earning today.</p>
+  <a class="btn" href="https://forms.gle/YOUR-GOOGLE-FORM-LINK" target="_blank">Submit Cashback Request</a>
+  <br><br>
+  <a href="https://notion.so/YOUR-NOTION-DASHBOARD-LINK" target="_blank">🔍 Track My Cashback</a>
+</section>
+
   <footer>
     &copy; 2025 TikCashBack. All rights reserved.
   </footer>
