--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <p>Create an account to start earning today.</p>
   <a class="btn" href="https://forms.gle/YOUR-GOOGLE-FORM-LINK" target="_blank">Submit Cashback Request</a>
   <br><br>
-  <a href="https://notion.so/YOUR-NOTION-DASHBOARD-LINK" target="_blank">🔍 Track My Cashback</a>
+  <a href="https://www.notion.so/CashBack-Tracker-23768096597180b1b086c8e83ed31043?source=copy_link" target="_blank">🔍 Track My Cashback</a>
 </section>
 
   <footer>
