--- a/index.html
+++ b/index.html
@@ -125,17 +125,13 @@
     </div>
   </section>
 
-  <section class="section" style="text-align: center">
-    <h2>Sign up for cashback</h2>
-    <p>Create an account to start earning today.</p>
-    <a class="btn" href="https://forms.google.com" target="_blank">Submit Cashback Request</a>
-  </section>
+  
 
 
   <section class="section" style="text-align: center">
   <h2>Sign up for cashback</h2>
   <p>Create an account to start earning today.</p>
-  <a class="btn" href="https://forms.gle/YOUR-GOOGLE-FORM-LINK" target="_blank">Submit Cashback Request</a>
+  <a class="btn" href="https://forms.gle/rkt2pXuw2Wb6csU89" target="_blank">Submit Cashback Request</a>
   <br><br>
   <a href="https://www.notion.so/CashBack-Tracker-23768096597180b1b086c8e83ed31043?source=copy_link" target="_blank">🔍 Track My Cashback</a>
 </section>
