--- a/index.html
+++ b/index.html
@@ -1,143 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TikCashBack - TikTok Cashback</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #fff;
-      margin: 0;
-      padding: 0;
-      color: #111;
-    }
-    header {
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: #fff;
-      border-bottom: 1px solid #eee;
-    }
-    .logo {
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-    .btn {
-      padding: 0.5rem 1rem;
-      background-color: #000;
-      color: #fff;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .hero {
-      text-align: center;
-      padding: 2rem;
-    }
-    .hero h1 {
-      font-size: 2rem;
-    }
-    .shop-btn {
-      background-color: #ff2c55;
-      margin-top: 1rem;
-    }
-    .section {
-      padding: 2rem;
-    }
-    .deals {
-      display: flex;
-      gap: 1rem;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-    .deal {
-      width: 160px;
-      text-align: center;
-    }
-    .deal img {
-      width: 100%;
-      border-radius: 8px;
-    }
-    .steps {
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      margin-top: 1rem;
-    }
-    .step {
-      width: 30%;
-      min-width: 150px;
-    }
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      background: #f9f9f9;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TikTok Deals with Cashback</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script defer src="https://www.googletagmanager.com/gtag/js?id='G-S8CXQVXNYM'></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-S8CXQVXNYM
+  </script>
 </head>
-<body>
-  <header>
-    <div class="logo">TikCashBack</div>
-    <button class="btn">Sign Up</button>
-  </header>
-
-  <section class="hero">
-    <h1>TikTok Shop Affiliate Cashback</h1>
-    <button class="btn shop-btn">Shop Now</button>
-  </section>
-
-  <section class="section">
-    <h2>Featured Deals</h2>
-    <div class="deals">
-      <div class="deal">
-        <img src="https://via.placeholder.com/150" alt="Earbuds">
-        <p>Wireless Earbuds<br>P299</p>
+<body class="bg-gray-50 text-gray-800">
+  <header class="bg-purple-700 text-white py-6 text-center">
+    <h1 class="text-3xl font-bold">TikTok Finds with Cashback</h1>
+    <p class="mt-2 text-sm">Buy viral products & earn instant cashback</p>
+  </header>  <main class="max-w-4xl mx-auto p-6 space-y-8">
+    <!-- Product Card Template -->
+    <div class="bg-white rounded-xl shadow p-4 flex flex-col md:flex-row gap-4">
+      <img src="https://via.placeholder.com/200" alt="Product Image" class="w-full md:w-48 rounded-lg">
+      <div class="flex-1">
+        <h2 class="text-xl font-semibold">Viral LED Star Projector</h2>
+        <p class="text-sm text-gray-600">Make your room look like a galaxy 🌌</p>
+        <p class="mt-2 text-green-600 font-bold">₱999 - Get ₱100 Cashback!</p>
+        <a href="https://vt.tiktok.com/ZSBTfctfu/" target="_blank" class="inline-block mt-4 bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-800" onclick="gtag('event', 'click', { 'event_category': 'product', 'event_label': 'LED Star Projector' });">Buy Now on TikTok</a>
       </div>
-      <div class="deal">
-        <img src="https://via.placeholder.com/150" alt="Tote Bag">
-        <p>Canvas Tote Bag<br>P120</p>
-      </div>
-      <div class="deal">
-        <img src="https://via.placeholder.com/150" alt="Hair Tool">
-        <p>Hair Styling Tool<br>P450</p>
-      </div>
-    </div>
-  </section>
+    </div><!-- Repeat the above div for more products -->
 
-  <section class="section">
-    <h2>How it works</h2>
-    <div class="steps">
-      <div class="step">
-        <h3>1. Click a link</h3>
-        <p>Find a deal and click our affiliate link</p>
-      </div>
-      <div class="step">
-        <h3>2. Make a purchase</h3>
-        <p>Complete your order in TikTok Shop</p>
-      </div>
-      <div class="step">
-        <h3>3. Get cashback</h3>
-        <p>Submit details and receive cashback</p>
-      </div>
-    </div>
-  </section>
-
-  
-
-
-  <section class="section" style="text-align: center">
-  <h2>Sign up for cashback</h2>
-  <p>Create an account to start earning today.</p>
-  <a class="btn" href="https://forms.gle/rkt2pXuw2Wb6csU89" target="_blank">Submit Cashback Request</a>
-  <br><br>
-  <a href="https://www.notion.so/CashBack-Tracker-23768096597180b1b086c8e83ed31043?source=copy_link" target="_blank">🔍 Track My Cashback</a>
+<section class="bg-white p-6 rounded-xl shadow">
+  <h3 class="text-lg font-bold mb-2">How to Claim Cashback</h3>
+  <ol class="list-decimal list-inside text-sm space-y-1">
+    <li>Click the "Buy Now" button to purchase via our link</li>
+    <li>After checkout, take a screenshot of your order</li>
+    <li>Submit it using the form below to receive cashback via GCash</li>
+  </ol>
 </section>
 
-  <footer>
-    &copy; 2025 TikCashBack. All rights reserved.
+<section class="bg-white p-6 rounded-xl shadow">
+  <h3 class="text-lg font-bold mb-4">Submit to Claim Cashback</h3>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfDXXX/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</section>
+
+  </main>  <footer class="text-center text-sm text-gray-500 py-6">
+    &copy; 2025 BalikBarya • Built with ❤️
   </footer>
 </body>
-</html>
+  </html>
