--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p class="mt-2 text-green-600 font-bold">₱999 - Get ₱100 Cashback!</p>
         <a href="https://vt.tiktok.com/ZSBTfctfu/" target="_blank" class="inline-block mt-4 bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-800" onclick="gtag('event', 'click', { 'event_category': 'product', 'event_label': 'LED Star Projector' });">Buy Now on TikTok</a>
       </div>
-    </div><!-- Repeat the above div for more products -->
+    </div><
 
 <section class="bg-white p-6 rounded-xl shadow">
   <h3 class="text-lg font-bold mb-2">How to Claim Cashback</h3>
